--- a/public/.htaccess
+++ b/public/.htaccess
@@ -3,7 +3,7 @@
 Redirect permanent /blog http://munieru.hatenablog.com
 Redirect permanent /twitter https://twitter.com/munieru_jp
 Redirect permanent /github https://github.com/munierujp
-Redirect permanent /qiita http://qiita.com/munieru
+Redirect permanent /qiita http://qiita.com/munieru_jp
 Redirect permanent /booklog http://booklog.jp/users/munierujp
 Redirect permanent /tabelog https://tabelog.com/rvwr/munieru/
 #####end:redirect#####
