--- a/public/.htaccess
+++ b/public/.htaccess
@@ -6,4 +6,5 @@ Redirect permanent /github https://github.com/munierujp
 Redirect permanent /qiita http://qiita.com/munieru_jp
 Redirect permanent /booklog http://booklog.jp/users/munierujp
 Redirect permanent /tabelog https://tabelog.com/rvwr/munieru/
+Redirect permanent /pixiv https://pixiv.me/munieru_jp
 #####end:redirect#####
