--- a/public/.htaccess
+++ b/public/.htaccess
@@ -7,4 +7,5 @@ Redirect permanent /qiita http://qiita.com/munieru_jp
 Redirect permanent /booklog http://booklog.jp/users/munierujp
 Redirect permanent /tabelog https://tabelog.com/rvwr/munieru/
 Redirect permanent /pixiv https://pixiv.me/munieru_jp
+Redirect permanent /niconico http://www.nicovideo.jp/user/65528596
 #####end:redirect#####
