--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,3 +1,6 @@
+RewriteEngine On
+RewriteCond %{HTTPS} off
+RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
 
 #####redirect#####
 Redirect permanent /blog http://blog.munieru.jp/
