--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "generate": "nuxt generate",
     "lint:js": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "lint:css": "stylelint '**/*.{css,scss,vue}'",
-    "fix": "eslint --fix --ext .js,.vue --ignore-path .gitignore .",
+    "fix:js": "eslint --fix --ext .js,.vue --ignore-path .gitignore .",
+    "fix:css": "stylelint --fix '**/*.{css,scss,vue}'",
     "precommit": "npm run lint"
   },
   "dependencies": {
