--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "generate": "nuxt generate",
     "lint:js": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "lint:css": "stylelint '**/*.{css,scss,vue}'",
+    "lint": "npm-run-all -p lint:*",
     "fix:js": "eslint --fix --ext .js,.vue --ignore-path .gitignore .",
     "fix:css": "stylelint --fix '**/*.{css,scss,vue}'",
     "precommit": "npm run lint"
