--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "vuetify": "^1.2.4"
   },
   "devDependencies": {
+    "@nuxtjs/google-analytics": "^2.0.2",
     "babel-eslint": "^8.2.1",
     "eslint": "^5.0.1",
     "eslint-config-standard": "^12.0.0",
