--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^4.0.0",
+    "get-age": "^1.0.1",
     "node-sass": "^4.11.0",
     "nodemon": "^1.11.0",
     "npm-run-all": "^4.1.5",
