--- a/config.sample.json
+++ b/config.sample.json
@@ -3,6 +3,7 @@
   "GIFTEE_URL": "https://giftee.co/u/munieru_jp",
   "GITHUB_SPONSOERS_URL": "https://github.com/sponsors/munierujp",
   "GOOGLE_ANALYTICS_UA": "UA-100023168-2",
+  "PAYPAL_URL": "https://www.paypal.me/munieru",
   "PAYPAY_ID": "munieru_jp",
   "TWITTER_ID": "munieru_jp",
   "OG_IMAGE_PATH": "favicon-256x256.png",
