--- a/package.json
+++ b/package.json
@@ -5,17 +5,17 @@
   "author": "Munieru",
   "private": true,
   "scripts": {
-    "dev": "nuxt",
     "build": "nuxt build",
-    "start": "nuxt start",
-    "generate": "nuxt generate",
-    "lint:js": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "lint:css": "stylelint '**/*.{css,scss,vue}'",
-    "lint": "npm-run-all -p lint:*",
-    "fix:js": "eslint --fix --ext .js,.vue --ignore-path .gitignore .",
-    "fix:css": "stylelint --fix '**/*.{css,scss,vue}'",
+    "dev": "nuxt",
     "fix": "npm-run-all -p fix:*",
-    "precommit": "npm run lint"
+    "fix:css": "stylelint --fix '**/*.{css,scss,vue}'",
+    "fix:js": "eslint --fix --ext .js,.vue --ignore-path .gitignore .",
+    "generate": "nuxt generate",
+    "lint": "npm-run-all -p lint:*",
+    "lint:css": "stylelint '**/*.{css,scss,vue}'",
+    "lint:js": "eslint --ext .js,.vue --ignore-path .gitignore .",
+    "precommit": "npm run lint",
+    "start": "nuxt start"
   },
   "dependencies": {
     "cross-env": "5.2.1",
