--- a/config.sample.json
+++ b/config.sample.json
@@ -1,6 +1,6 @@
 {
   "BASE_DIR": "/",
-  "GIFTEE_URL": "https://giftee.co/u/munieru_jp",
+  "GIFTEE_URL": "https://giftee.com/u/munieru_jp",
   "GITHUB_SPONSOERS_URL": "https://github.com/sponsors/munierujp",
   "GOOGLE_ANALYTICS_UA": "UA-100023168-2",
   "PAYPAL_URL": "https://www.paypal.me/munieru",
