--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "nodemon": "1.19.4",
     "npm-run-all": "4.1.5",
     "nuxt-i18n": "5.12.7",
+    "sass": "1.51.0",
     "sass-loader": "7.3.1",
     "stylelint": "13.13.1",
     "stylelint-config-standard": "22.0.0",
