--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-promise": "5.1.1",
     "eslint-plugin-standard": "4.1.0",
     "eslint-plugin-vue": "4.7.1",
+    "fibers": "5.0.1",
     "get-age": "1.0.1",
     "node-sass": "4.14.1",
     "nodemon": "1.19.4",
