--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vuetify": "1.5.24"
   },
   "devDependencies": {
+    "@babel/core": "7.18.10",
     "@nuxtjs/google-analytics": "2.4.0",
     "fibers": "5.0.2",
     "get-age": "1.0.1",
