--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "build": "nuxt build",
     "dev": "nuxt",
     "generate": "nuxt generate",
+    "lint": "npm-run-all -p lint:*",
+    "lint:html": "markuplint \"**/*.{html,vue}\"",
     "start": "nuxt start"
   },
   "dependencies": {
@@ -17,8 +19,12 @@
   },
   "devDependencies": {
     "@babel/core": "7.20.12",
+    "@markuplint/vue-parser": "3.5.0",
+    "@markuplint/vue-spec": "3.5.0",
     "@nuxtjs/google-analytics": "2.4.0",
+    "markuplint": "3.5.0",
     "nodemon": "2.0.20",
+    "npm-run-all2": "6.0.4",
     "nuxt-i18n": "6.28.1",
     "sass": "1.58.1",
     "sass-loader": "10.4.1",
